--- a/portfolio.html
+++ b/portfolio.html
@@ -12,23 +12,23 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
     crossorigin="anonymous" />
-<link rel="stylesheet" href="./style.css">
+<link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
     <header class="page-header">
         <div class="container">
             <!--logo-->
-            <nav class="navigation">
+            <nav class="nav">
                 <a class="logo" lang="en" href="./index.html"><span class="logo logo--blue">Web</span>Studio</a>
-                <ul class="nav-list">
-                    <li class="nav-list__item list">
-                        <a class="nav-list__link link" href="./index.html">Студия</a>
+                <ul class="nav__list">
+                    <li class="nav__item list">
+                        <a class="nav__link link" href="./index.html">Студия</a>
                     </li>
-                    <li class="nav-list__item list">
-                        <a class="nav-list__link link active" href="./portfolio.html">Портфолио</a>
+                    <li class="nav__item list">
+                        <a class="nav__link link active" href="./portfolio.html">Портфолио</a>
                     </li>
-                    <li class="nav-list__item list">
-                        <a class="nav-list__link link" href="#">Контакты</a>
+                    <li class="nav__item list">
+                        <a class="nav__link link" href="#">Контакты</a>
                     </li>
                 </ul>
             </nav>
